--- a/expedited.html
+++ b/expedited.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="shortcut icon" href="https://app.salesdrip.com/users/myteam45785/Media180.ico"/>
-    <title>Sims Global Solutions</title>
+    <title>Expedited</title>
     <link rel="stylesheet" type="text/css" href="resources/css/reset.css">
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Oswald:700,400,300|Rubik:300,400,500" rel="stylesheet">
@@ -58,17 +58,14 @@
       </div>
       <div class="stripyellow">
         <div class="yellowtitle">
-          Services
+          <a href="#" class="blue">Services</a><span class="hidden">.</span>/ EXPEDITED
         </div>
       </div>
       <div class="section1">
       <div class="mainbody">
-
-
-
         <div class="maincontent">
           <div class="maintitle">
-            SERVICES AND TECHNOLOGY
+            EXPEDITED
           </div>
           <div class="mainmedia">
             <a href="https://www.facebook.com/dialog/share?app_id=5303202981&display=popup&href=https%3A%2F%2Fshipsims.com%2Fservices%2F&redirect_uri=https%3A%2F%2Fstatic.addtoany.com%2Fmenu%2Fthanks.html%23url%3Dhttps%3A%2F%2Fshipsims.com%2Fservices%2F&quote=" target="_blank"><img src="https://app.salesdrip.com/users/myteam45785/Media184.jpg" alt=""></a>
@@ -80,14 +77,106 @@
 
           </div>
           <div class="maintext">
-            <p>We help customers quickly identify available mode opportunities to convert Less-Than-Truckload (
-              LTL) freight to truckload or intermodal instead, which can be cost beneficial. This means less handling
-              of shipments, which causes faster transit times and mitigates the risk for freight claims. Streamlining
-              your transportation also means less fuel consumption, which is better for the environment.</p>
+            <p>When deadlines are to be met and timing is critical, our expedited services provide the flexibility
+              that you need to keep your customers happy. We offer many different expedited solutions and allow you
+               to determine the right fit for your budget. Our dedicated team of professionals respond immediately
+               and bring you a variety of solutions to the table. From 1 pallet to a Full Truckload, let the experts
+                at Sims Global be the ones you can count on.</p>
+
+                <div class="servlistsEXP">
+                  <!--------------------------------List------------------------------>
+                  <div class="typelistEXP">
+                    <div class="listicon">
+                      <img src="https://app.salesdrip.com/users/myteam45785/Media44.png" alt="">
+                    </div>
+                    <div class="listcontent">
+                    <div class="titlelist">Truckload</div>
+                    <div class="typeitem">
+                      Same Day
+                    </div>
+                    <div class="typeitem">
+                      Next Day
+                    </div>
+                    <div class="typeitem">
+                      Team
+                    </div>
+                    <div class="typeitem">
+                      Real-Time GPS Tracking
+                    </div>
+                    <div class="typeitem">
+                      Proactive Updates
+                    </div>
+                    <div class="typeitem">
+                      24/7 Support
+                    </div>
+                    </div>
+                  </div>
+                  <!--------------------------------List------------------------------>
+                  <div class="typelistEXP">
+                    <div class="listicon">
+                      <img src="https://app.salesdrip.com/users/myteam45785/Media44.png" alt="">
+                    </div>
+                    <div class="listcontent">
+                    <div class="titlelist">Expedited LTL</div>
+                    <div class="typeitem">
+                      Same Day
+                    </div>
+                    <div class="typeitem">
+                      Next Day
+                    </div>
+                    <div class="typeitem">
+                      2 Day
+                    </div>
+                    <div class="typeitem">
+                     Window Delivery
+                    </div>
+                    <div class="typeitem">
+                      By 10am
+                    </div>
+                    <div class="typeitem">
+                      By Noon
+                    </div>
+                    <div class="typeitem">
+                      By 5pm
+                    </div>
+                    </div>
+                  </div>
+                  <!--------------------------------List------------------------------>
+                  <div class="typelistEXP">
+                    <div class="listicon">
+                      <img src="https://app.salesdrip.com/users/myteam45785/Media44.png" alt="">
+                    </div>
+                    <div class="listcontent">
+                    <div class="titlelist">AIR</div>
+                    <div class="typeitem">
+                      National
+                    </div>
+                    <div class="typeitem">
+                      International
+                    </div>
+                    </div>
+                  </div>
+                  <!--------------------------------List------------------------------>
+                  <div class="typelistEXP">
+                    <div class="listicon">
+                      <img src="https://app.salesdrip.com/users/myteam45785/Media44.png" alt="">
+                    </div>
+                    <div class="listcontent">
+                    <div class="titlelist">Expedited Ocean</div>
+                    <div class="typeitem">
+                      Asia
+                    </div>
+                    <div class="typeitem">
+                      Europe
+                    </div>
+                    </div>
+                  </div>
+                  <!--------------------------------List------------------------------>
+                </div>
           </div>
         </div>
         <div class="mainimg">
-          <img src="https://app.salesdrip.com/users/myteam45785/Media15.png" alt="">
+          <a href=""><img src="https://app.salesdrip.com/users/myteam45785/Media19.png" alt=""></a>
         </div>
       </div>
 
@@ -220,7 +309,7 @@
        </div>
        <div class="contactbar">
          <p> Sims Global Solutions. 6101 Long Prairie Rd., Ste. 744-252, Flower Mound, TX 75028
-     <span class="doublepad">Email: <span class="blue"><a class="blue" href="<a href="mailto:customerservice@simsglobalsolutions.com">customerservice@simsglobalsolutions.com</a></span></span>
+          <span class="doublepad">Email: <span class="blue"><a class="blue" href="<a href="mailto:customerservice@simsglobalsolutions.com">customerservice@simsglobalsolutions.com</a></span></span>
 <span class="pad">Phone: <a class="blue" href="tel:+1855-326-8671">855-326-8671</a></span> <span class="pad">Fax: <span>214-594-9164</span></span></p>
        </div>
       </div>
