--- a/intermodal.html
+++ b/intermodal.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="shortcut icon" href="https://app.salesdrip.com/users/myteam45785/Media180.ico"/>
-    <title>Sims Global Solutions</title>
+    <title>Intermodal</title>
     <link rel="stylesheet" type="text/css" href="resources/css/reset.css">
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Oswald:700,400,300|Rubik:300,400,500" rel="stylesheet">
@@ -58,17 +58,14 @@
       </div>
       <div class="stripyellow">
         <div class="yellowtitle">
-          Services
+          <a href="#" class="blue">Services</a><span class="hidden">.</span>/ INTERMODAL
         </div>
       </div>
       <div class="section1">
       <div class="mainbody">
-
-
-
         <div class="maincontent">
           <div class="maintitle">
-            SERVICES AND TECHNOLOGY
+            INTERMODAL
           </div>
           <div class="mainmedia">
             <a href="https://www.facebook.com/dialog/share?app_id=5303202981&display=popup&href=https%3A%2F%2Fshipsims.com%2Fservices%2F&redirect_uri=https%3A%2F%2Fstatic.addtoany.com%2Fmenu%2Fthanks.html%23url%3Dhttps%3A%2F%2Fshipsims.com%2Fservices%2F&quote=" target="_blank"><img src="https://app.salesdrip.com/users/myteam45785/Media184.jpg" alt=""></a>
@@ -80,14 +77,90 @@
 
           </div>
           <div class="maintext">
-            <p>We help customers quickly identify available mode opportunities to convert Less-Than-Truckload (
-              LTL) freight to truckload or intermodal instead, which can be cost beneficial. This means less handling
-              of shipments, which causes faster transit times and mitigates the risk for freight claims. Streamlining
-              your transportation also means less fuel consumption, which is better for the environment.</p>
+            <p>If timing isn’t a necessity or you are looking for a greener alternative whether
+              that be price or environmental based, look no further than our Intermodal services.
+              Typically a capacity-crunch alternative to your over-the-road trucking, Intermodal shipping
+               has since become another environmentally friendly alternative. With the expansion of the
+                Intermodal Rail system combined with greater fuel efficiency of trains, this allows
+                for greater cost savings opportunities and environmentally friendly options. If you have the
+                time, we can save the money.</p>
+
+                <div class="servlistsEXP">
+                  <!--------------------------------List------------------------------>
+                  <div class="typelistEXP">
+                    <div class="listicon">
+                      <img src="https://app.salesdrip.com/users/myteam45785/Media41.png" alt="">
+                    </div>
+                    <div class="listcontent">
+                    <div class="titlelist">Services</div>
+                    <div class="typeitem">
+                      Cross Country
+                    </div>
+                    <div class="typeitem">
+                      Cross-Border
+                    </div>
+                    </div>
+                  </div>
+                  <!--------------------------------List------------------------------>
+                  <div class="typelistEXP">
+                    <div class="listicon">
+                      <img src="https://app.salesdrip.com/users/myteam45785/Media41.png" alt="">
+                    </div>
+                    <div class="listcontent">
+                    <div class="titlelist">Container Types</div>
+                    <div class="typeitem">
+                      Dry
+                    </div>
+                    <div class="typeitem">
+                      Reefer and Heated
+                    </div>
+                    <div class="typeitem">
+                      2 Day
+                    </div>
+                    <div class="typeitem">
+                     Open-Top
+                    </div>
+                    <div class="typeitem">
+                      Flat-Rack & Platform
+                    </div>
+                    </div>
+                  </div>
+                  <!--------------------------------List------------------------------>
+                  <div class="typelistEXP">
+                    <div class="listicon">
+                      <img src="https://app.salesdrip.com/users/myteam45785/Media41.png" alt="">
+                    </div>
+                    <div class="listcontent">
+                    <div class="titlelist">Port Drayage</div>
+                    <div class="typeitem">
+                      Same Day Pickup and Delivery
+                    </div>
+                    <div class="typeitem">
+                      Real-Time Status Updates
+                    </div>
+                    </div>
+                  </div>
+                  <!--------------------------------List------------------------------>
+                  <div class="typelistEXP">
+                    <div class="listicon">
+                      <img src="https://app.salesdrip.com/users/myteam45785/Media41.png" alt="">
+                    </div>
+                    <div class="listcontent">
+                    <div class="titlelist">Cross-Docking Operation</div>
+                    <div class="typeitem">
+                      Same Day Transfer
+                    </div>
+                    <div class="typeitem">
+                      Flat Rate per Container
+                    </div>
+                    </div>
+                  </div>
+                  <!--------------------------------List------------------------------>
+                </div>
           </div>
         </div>
         <div class="mainimg">
-          <img src="https://app.salesdrip.com/users/myteam45785/Media15.png" alt="">
+          <a href=""><img src="https://app.salesdrip.com/users/myteam45785/Media4.png" alt=""></a>
         </div>
       </div>
 
@@ -220,7 +293,7 @@
        </div>
        <div class="contactbar">
          <p> Sims Global Solutions. 6101 Long Prairie Rd., Ste. 744-252, Flower Mound, TX 75028
-     <span class="doublepad">Email: <span class="blue"><a class="blue" href="<a href="mailto:customerservice@simsglobalsolutions.com">customerservice@simsglobalsolutions.com</a></span></span>
+          <span class="doublepad">Email: <span class="blue"><a class="blue" href="<a href="mailto:customerservice@simsglobalsolutions.com">customerservice@simsglobalsolutions.com</a></span></span>
 <span class="pad">Phone: <a class="blue" href="tel:+1855-326-8671">855-326-8671</a></span> <span class="pad">Fax: <span>214-594-9164</span></span></p>
        </div>
       </div>
