--- a/international.html
+++ b/international.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="shortcut icon" href="https://app.salesdrip.com/users/myteam45785/Media180.ico"/>
-    <title>Sims Global Solutions</title>
+    <title>International</title>
     <link rel="stylesheet" type="text/css" href="resources/css/reset.css">
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Oswald:700,400,300|Rubik:300,400,500" rel="stylesheet">
@@ -58,17 +58,14 @@
       </div>
       <div class="stripyellow">
         <div class="yellowtitle">
-          Services
+          <a href="#" class="blue">Services</a><span class="hidden">.</span>/ international
         </div>
       </div>
       <div class="section1">
       <div class="mainbody">
-
-
-
         <div class="maincontent">
           <div class="maintitle">
-            SERVICES AND TECHNOLOGY
+           International
           </div>
           <div class="mainmedia">
             <a href="https://www.facebook.com/dialog/share?app_id=5303202981&display=popup&href=https%3A%2F%2Fshipsims.com%2Fservices%2F&redirect_uri=https%3A%2F%2Fstatic.addtoany.com%2Fmenu%2Fthanks.html%23url%3Dhttps%3A%2F%2Fshipsims.com%2Fservices%2F&quote=" target="_blank"><img src="https://app.salesdrip.com/users/myteam45785/Media184.jpg" alt=""></a>
@@ -80,14 +77,58 @@
 
           </div>
           <div class="maintext">
-            <p>We help customers quickly identify available mode opportunities to convert Less-Than-Truckload (
-              LTL) freight to truckload or intermodal instead, which can be cost beneficial. This means less handling
-              of shipments, which causes faster transit times and mitigates the risk for freight claims. Streamlining
-              your transportation also means less fuel consumption, which is better for the environment.</p>
+            <p>International shipping can seem like a tough task in and of itself, but the dedicated Sims
+               Global International team loves a challenge. We leverage our vendor partnerships so that
+                you can utilize the benefits from each. From cross-border services to Intercontinental
+                 we offer global freight services wherever you do business. Whether by air, land, or sea,
+                  worldwide door-to-door shipments begin with Sims.</p>
+
+                <div class="servlistsEXP">
+                  <!--------------------------------List------------------------------>
+                  <div class="typelistEXP">
+                    <div class="listicon">
+                      <img src="https://app.salesdrip.com/users/myteam45785/Media41.png" alt="">
+                    </div>
+                    <div class="listcontent">
+                    <div class="titlelist">Service Type</div>
+                    <div class="typeitem">
+                      Air
+                    </div>
+                    <div class="typeitem">
+                      Ocean
+                    </div>
+                    <div class="typeitem">
+                      Expedited Ocean
+                    </div>
+                    </div>
+                  </div>
+                  <!--------------------------------List------------------------------>
+                  <div class="typelistEXP">
+                    <div class="listicon">
+                      <img src="https://app.salesdrip.com/users/myteam45785/Media41.png" alt="">
+                    </div>
+                    <div class="listcontent">
+                    <div class="titlelist">Delivery Type</div>
+                    <div class="typeitem">
+                      Door to Door
+                    </div>
+                    <div class="typeitem">
+                      Port to Port
+                    </div>
+                    <div class="typeitem">
+                      Door to Port
+                    </div>
+                    <div class="typeitem">
+                     Port to Door
+                    </div>
+                    </div>
+                  </div>
+                  <!--------------------------------List------------------------------>
+                </div>
           </div>
         </div>
         <div class="mainimg">
-          <img src="https://app.salesdrip.com/users/myteam45785/Media15.png" alt="">
+          <a href=""><img src="https://app.salesdrip.com/users/myteam45785/Media6.png" alt=""></a>
         </div>
       </div>
 
@@ -220,7 +261,7 @@
        </div>
        <div class="contactbar">
          <p> Sims Global Solutions. 6101 Long Prairie Rd., Ste. 744-252, Flower Mound, TX 75028
-     <span class="doublepad">Email: <span class="blue"><a class="blue" href="<a href="mailto:customerservice@simsglobalsolutions.com">customerservice@simsglobalsolutions.com</a></span></span>
+          <span class="doublepad">Email: <span class="blue"><a class="blue" href="<a href="mailto:customerservice@simsglobalsolutions.com">customerservice@simsglobalsolutions.com</a></span></span>
 <span class="pad">Phone: <a class="blue" href="tel:+1855-326-8671">855-326-8671</a></span> <span class="pad">Fax: <span>214-594-9164</span></span></p>
        </div>
       </div>
