--- a/ltl.html
+++ b/ltl.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="shortcut icon" href="https://app.salesdrip.com/users/myteam45785/Media180.ico"/>
-    <title>Sims Global Solutions</title>
+    <title>Less-Than-Truckload</title>
     <link rel="stylesheet" type="text/css" href="resources/css/reset.css">
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Oswald:700,400,300|Rubik:300,400,500" rel="stylesheet">
@@ -58,17 +58,14 @@
       </div>
       <div class="stripyellow">
         <div class="yellowtitle">
-          Services
+          <a href="#" class="blue">Services</a><span class="hidden">.</span>/ LTL
         </div>
       </div>
       <div class="section1">
       <div class="mainbody">
-
-
-
         <div class="maincontent">
           <div class="maintitle">
-            SERVICES AND TECHNOLOGY
+            LESS-THAN-TRUCKLOAD (LTL)
           </div>
           <div class="mainmedia">
             <a href="https://www.facebook.com/dialog/share?app_id=5303202981&display=popup&href=https%3A%2F%2Fshipsims.com%2Fservices%2F&redirect_uri=https%3A%2F%2Fstatic.addtoany.com%2Fmenu%2Fthanks.html%23url%3Dhttps%3A%2F%2Fshipsims.com%2Fservices%2F&quote=" target="_blank"><img src="https://app.salesdrip.com/users/myteam45785/Media184.jpg" alt=""></a>
@@ -80,17 +77,136 @@
 
           </div>
           <div class="maintext">
-            <p>We help customers quickly identify available mode opportunities to convert Less-Than-Truckload (
-              LTL) freight to truckload or intermodal instead, which can be cost beneficial. This means less handling
-              of shipments, which causes faster transit times and mitigates the risk for freight claims. Streamlining
-              your transportation also means less fuel consumption, which is better for the environment.</p>
+            <p>For small to medium sized shipments, Less-Than-Truckload (LTL) is your best bet.
+              LTL is perfect for 150 to 20,000 lb shipments. We have pre-determined rates with a
+              wide range of top-tier carriers and pass the savings onto you.</p><br><p>SimsTrak®, our state of the art TMS system,
+              automates the process and makes shipping easy. With SimsTrak®, you can stay on top of all of your business
+              through customizable reports to give you live insight on your company’s pulse.</p><br><p>We’re here to help you determine who
+              will be the best fit for your shipment for the following delivery types:
+                 </p>
           </div>
         </div>
         <div class="mainimg">
-          <img src="https://app.salesdrip.com/users/myteam45785/Media15.png" alt="">
+          <a href=""><img src="https://app.salesdrip.com/users/myteam45785/Media14.png" alt=""></a>
         </div>
       </div>
-
+      <div class="servlists">
+        <!--------------------------------List------------------------------>
+        <div class="typelist">
+          <div class="listicon">
+            <img src="https://app.salesdrip.com/users/myteam45785/Media45.png" alt="">
+          </div>
+          <div class="listcontent">
+          <div class="titlelist">Standard</div>
+          <div class="typeitem">
+            National Coverage
+          </div>
+          <div class="typeitem">
+            Regional Coverage
+          </div>
+          <div class="typeitem">
+            Local Coverage
+          </div>
+          <div class="typeitem">
+            Cross-Border
+          </div>
+          </div>
+        </div>
+        <!--------------------------------List------------------------------>
+        <div class="typelist">
+          <div class="listicon">
+            <img src="https://app.salesdrip.com/users/myteam45785/Media45.png" alt="">
+          </div>
+          <div class="listcontent">
+          <div class="titlelist">Guaranteed</div>
+          <div class="typeitem">
+            Window Delivery
+          </div>
+          <div class="typeitem">
+            By 10am
+          </div>
+          <div class="typeitem">
+            By Noon
+          </div>
+          <div class="typeitem">
+           By 5pm
+          </div>
+          </div>
+        </div>
+        <!--------------------------------List------------------------------>
+        <div class="typelist">
+          <div class="listicon">
+            <img src="https://app.salesdrip.com/users/myteam45785/Media45.png" alt="">
+          </div>
+          <div class="listcontent">
+          <div class="titlelist">Expedited</div>
+          <div class="typeitem">
+            Faster Transit Days
+          </div>
+          <div class="typeitem">
+            Less Handling
+          </div>
+          <div class="typeitem">
+            Real-time Status Updates
+          </div>
+          </div>
+        </div>
+        <!--------------------------------List------------------------------>
+        <div class="typelist">
+          <div class="listicon">
+            <img src="https://app.salesdrip.com/users/myteam45785/Media45.png" alt="">
+          </div>
+          <div class="listcontent">
+          <div class="titlelist">Retail Solutions</div>
+          <div class="typeitem">
+            Choose from the Retailer's Preferred Carrier list
+          </div>
+          <div class="typeitem">
+            Guaranteed Solutions
+          </div>
+          <div class="typeitem">
+            Improve Stock Positions with Better Scorecard
+          </div>
+          </div>
+        </div>
+        <!--------------------------------List------------------------------>
+        <div class="typelist">
+          <div class="listicon">
+            <img src="https://app.salesdrip.com/users/myteam45785/Media45.png" alt="">
+          </div>
+          <div class="listcontent">
+          <div class="titlelist">Tradeshow Services</div>
+          <div class="typeitem">
+            Choose from the Tradeshow's Preferred Carrier List
+          </div>
+          <div class="typeitem">
+            Coordinated Expo Delivery and Pickup
+          </div>
+          <div class="typeitem">
+            Online Rates and Tracking
+          </div>
+          </div>
+        </div>
+        <!--------------------------------List------------------------------>
+        <div class="typelist">
+          <div class="listicon">
+            <img src="https://app.salesdrip.com/users/myteam45785/Media45.png" alt="">
+          </div>
+          <div class="listcontent">
+          <div class="titlelist">Temperature-Controlled</div>
+          <div class="typeitem">
+            Frozen products
+          </div>
+          <div class="typeitem">
+            Fresh Produce
+          </div>
+          <div class="typeitem">
+            Pharmaceuticals
+          </div>
+          </div>
+        </div>
+        <!--------------------------------List------------------------------>
+      </div>
       </div>
     </div>
     <!-- Footer Section ------------------------------------------------------>
@@ -220,7 +336,7 @@
        </div>
        <div class="contactbar">
          <p> Sims Global Solutions. 6101 Long Prairie Rd., Ste. 744-252, Flower Mound, TX 75028
-     <span class="doublepad">Email: <span class="blue"><a class="blue" href="<a href="mailto:customerservice@simsglobalsolutions.com">customerservice@simsglobalsolutions.com</a></span></span>
+          <span class="doublepad">Email: <span class="blue"><a class="blue" href="<a href="mailto:customerservice@simsglobalsolutions.com">customerservice@simsglobalsolutions.com</a></span></span>
 <span class="pad">Phone: <a class="blue" href="tel:+1855-326-8671">855-326-8671</a></span> <span class="pad">Fax: <span>214-594-9164</span></span></p>
        </div>
       </div>
