--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="shortcut icon" href="https://app.salesdrip.com/users/myteam45785/Media180.ico"/>
-    <title>Sims Global Solutions</title>
+    <title>Services</title>
     <link rel="stylesheet" type="text/css" href="resources/css/reset.css">
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Oswald:700,400,300|Rubik:300,400,500" rel="stylesheet">
@@ -63,9 +63,6 @@
       </div>
       <div class="section1">
       <div class="mainbody">
-
-
-
         <div class="maincontent">
           <div class="maintitle">
             SERVICES AND TECHNOLOGY
@@ -84,13 +81,37 @@
               LTL) freight to truckload or intermodal instead, which can be cost beneficial. This means less handling
               of shipments, which causes faster transit times and mitigates the risk for freight claims. Streamlining
               your transportation also means less fuel consumption, which is better for the environment.</p>
+              <br><h3>REAL-TIME QUOTING, SCHEDULING AND TRACKING</h3><p>Our cutting-edge Transportation Management System (TMS)
+                technology allows you to source the best carriers and enables you to quote, schedule, and track all of your shipments in
+                real time for total visibility. Get the most accurate data during and after shipments with consolidated billing and customized
+                reports.</p><br><p>Sims Global Solutions provides scalable shipping options to help you
+                  choose the level of service that fits your needs. <span class="bold">Select a service to learn more:</span></p>
           </div>
         </div>
         <div class="mainimg">
-          <img src="https://app.salesdrip.com/users/myteam45785/Media15.png" alt="">
+          <a href="mailto:customerservice@simsglobalsolutions.com"><img src="https://app.salesdrip.com/users/myteam45785/Media15.png" alt=""></a>
         </div>
       </div>
-
+      <div class="servicetypes">
+        <div class="servicon">
+          <a href="#"><img src="https://app.salesdrip.com/users/myteam45785/Media42.png" alt=""><p>Truckload</p></a>
+        </div>
+        <div class="servicon">
+          <a href="#"><img src="https://app.salesdrip.com/users/myteam45785/Media45.png" alt=""><p>LTL</p></a>
+        </div>
+        <div class="servicon">
+          <a href="#"><img src="https://app.salesdrip.com/users/myteam45785/Media44.png" alt=""><p>Expedited</p></a>
+        </div>
+        <div class="servicon">
+          <a href="#"><img src="https://app.salesdrip.com/users/myteam45785/Media41.png" alt=""><p>Intermodal</p></a>
+        </div>
+        <div class="servicon">
+          <a href="#"><img src="https://app.salesdrip.com/users/myteam45785/Media46.png" alt=""><p>Specialized</p></a>
+        </div>
+        <div class="servicon">
+          <a href="#"><img src="https://app.salesdrip.com/users/myteam45785/Media43.png" alt=""><p>International</p></a>
+        </div>
+      </div>
       </div>
     </div>
     <!-- Footer Section ------------------------------------------------------>
@@ -220,7 +241,7 @@
        </div>
        <div class="contactbar">
          <p> Sims Global Solutions. 6101 Long Prairie Rd., Ste. 744-252, Flower Mound, TX 75028
-     <span class="doublepad">Email: <span class="blue"><a class="blue" href="<a href="mailto:customerservice@simsglobalsolutions.com">customerservice@simsglobalsolutions.com</a></span></span>
+          <span class="doublepad">Email: <span class="blue"><a class="blue" href="<a href="mailto:customerservice@simsglobalsolutions.com">customerservice@simsglobalsolutions.com</a></span></span>
 <span class="pad">Phone: <a class="blue" href="tel:+1855-326-8671">855-326-8671</a></span> <span class="pad">Fax: <span>214-594-9164</span></span></p>
        </div>
       </div>
