--- a/specialized.html
+++ b/specialized.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="shortcut icon" href="https://app.salesdrip.com/users/myteam45785/Media180.ico"/>
-    <title>Sims Global Solutions</title>
+    <title>Specialized</title>
     <link rel="stylesheet" type="text/css" href="resources/css/reset.css">
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Oswald:700,400,300|Rubik:300,400,500" rel="stylesheet">
@@ -58,17 +58,14 @@
       </div>
       <div class="stripyellow">
         <div class="yellowtitle">
-          Services
+          <a href="#" class="blue">Services</a><span class="hidden">.</span>/ Specialized
         </div>
       </div>
       <div class="section1">
       <div class="mainbody">
-
-
-
         <div class="maincontent">
           <div class="maintitle">
-            SERVICES AND TECHNOLOGY
+            Specialized
           </div>
           <div class="mainmedia">
             <a href="https://www.facebook.com/dialog/share?app_id=5303202981&display=popup&href=https%3A%2F%2Fshipsims.com%2Fservices%2F&redirect_uri=https%3A%2F%2Fstatic.addtoany.com%2Fmenu%2Fthanks.html%23url%3Dhttps%3A%2F%2Fshipsims.com%2Fservices%2F&quote=" target="_blank"><img src="https://app.salesdrip.com/users/myteam45785/Media184.jpg" alt=""></a>
@@ -80,14 +77,111 @@
 
           </div>
           <div class="maintext">
-            <p>We help customers quickly identify available mode opportunities to convert Less-Than-Truckload (
-              LTL) freight to truckload or intermodal instead, which can be cost beneficial. This means less handling
-              of shipments, which causes faster transit times and mitigates the risk for freight claims. Streamlining
-              your transportation also means less fuel consumption, which is better for the environment.</p>
+            <p>When we say specialized, we mean a special kind of shipment, with a special kind of solution.
+              From Heavy Haul loads that require specialized trailers to White-Glove shipments that require specialized
+               handling, we are here to handle the “outside the box” shipments. With our diverse network of carriers,
+                we offer many types of options to fit your desired need.</p>
+
+                <div class="servlistsEXP">
+                  <!--------------------------------List------------------------------>
+                  <div class="typelistEXP">
+                    <div class="listicon">
+                      <img src="https://app.salesdrip.com/users/myteam45785/Media41.png" alt="">
+                    </div>
+                    <div class="listcontent">
+                    <div class="titlelist">White Glove Services</div>
+                    <div class="typeitem">
+                      Crating
+                    </div>
+                    <div class="typeitem">
+                      Packing
+                    </div>
+                    <div class="typeitem">
+                      Residential
+                    </div>
+                    <div class="typeitem">
+                      Inside Delivery
+                    </div>
+                    <div class="typeitem">
+                      Equipment Setup
+                    </div>
+                    <div class="typeitem">
+                      Devris Removal
+                    </div>
+                    </div>
+                  </div>
+                  <!--------------------------------List------------------------------>
+                  <div class="typelistEXP">
+                    <div class="listicon">
+                      <img src="https://app.salesdrip.com/users/myteam45785/Media41.png" alt="">
+                    </div>
+                    <div class="listcontent">
+                    <div class="titlelist">White Glove Service Types</div>
+                    <div class="typeitem">
+                      Standard
+                    </div>
+                    <div class="typeitem">
+                      Premier
+                    </div>
+                    <div class="typeitem">
+                      Guaranteed Day
+                    </div>
+                    <div class="typeitem">
+                     Expedited
+                    </div>
+                    <div class="typeitem">
+                      Window Delivery
+                    </div>
+                    </div>
+                  </div>
+                  <!--------------------------------List------------------------------>
+                  <div class="typelistEXP">
+                    <div class="listicon">
+                      <img src="https://app.salesdrip.com/users/myteam45785/Media41.png" alt="">
+                    </div>
+                    <div class="listcontent">
+                    <div class="titlelist">Specialized Services</div>
+                    <div class="typeitem">
+                      Heavy Haul
+                    </div>
+                    <div class="typeitem">
+                      Over-sized
+                    </div>
+                    <div class="typeitem">
+                      Escort Services
+                    </div>
+                    <div class="typeitem">
+                      Permit Service
+                    </div>
+                    </div>
+                  </div>
+                  <!--------------------------------List------------------------------>
+                  <div class="typelistEXP">
+                    <div class="listicon">
+                      <img src="https://app.salesdrip.com/users/myteam45785/Media41.png" alt="">
+                    </div>
+                    <div class="listcontent">
+                    <div class="titlelist">Specialized Equipment Types</div>
+                    <div class="typeitem">
+                      RGN
+                    </div>
+                    <div class="typeitem">
+                      Lowboys
+                    </div>
+                    <div class="typeitem">
+                      Multi-Axle
+                    </div>
+                    <div class="typeitem">
+                      Double Drop
+                    </div>
+                    </div>
+                  </div>
+                  <!--------------------------------List------------------------------>
+                </div>
           </div>
         </div>
         <div class="mainimg">
-          <img src="https://app.salesdrip.com/users/myteam45785/Media15.png" alt="">
+          <a href=""><img src="https://app.salesdrip.com/users/myteam45785/Media9.png" alt=""></a>
         </div>
       </div>
 
@@ -220,7 +314,7 @@
        </div>
        <div class="contactbar">
          <p> Sims Global Solutions. 6101 Long Prairie Rd., Ste. 744-252, Flower Mound, TX 75028
-     <span class="doublepad">Email: <span class="blue"><a class="blue" href="<a href="mailto:customerservice@simsglobalsolutions.com">customerservice@simsglobalsolutions.com</a></span></span>
+          <span class="doublepad">Email: <span class="blue"><a class="blue" href="<a href="mailto:customerservice@simsglobalsolutions.com">customerservice@simsglobalsolutions.com</a></span></span>
 <span class="pad">Phone: <a class="blue" href="tel:+1855-326-8671">855-326-8671</a></span> <span class="pad">Fax: <span>214-594-9164</span></span></p>
        </div>
       </div>
