--- a/truckload.html
+++ b/truckload.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="shortcut icon" href="https://app.salesdrip.com/users/myteam45785/Media180.ico"/>
-    <title>Sims Global Solutions</title>
+    <title>Truckload</title>
     <link rel="stylesheet" type="text/css" href="resources/css/reset.css">
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Oswald:700,400,300|Rubik:300,400,500" rel="stylesheet">
@@ -58,17 +58,14 @@
       </div>
       <div class="stripyellow">
         <div class="yellowtitle">
-          Services
+          <a href="#" class="blue">Services</a><span class="hidden">.</span>/ TRUCKLOAD
         </div>
       </div>
       <div class="section1">
       <div class="mainbody">
-
-
-
         <div class="maincontent">
           <div class="maintitle">
-            SERVICES AND TECHNOLOGY
+            TRUCKLOAD
           </div>
           <div class="mainmedia">
             <a href="https://www.facebook.com/dialog/share?app_id=5303202981&display=popup&href=https%3A%2F%2Fshipsims.com%2Fservices%2F&redirect_uri=https%3A%2F%2Fstatic.addtoany.com%2Fmenu%2Fthanks.html%23url%3Dhttps%3A%2F%2Fshipsims.com%2Fservices%2F&quote=" target="_blank"><img src="https://app.salesdrip.com/users/myteam45785/Media184.jpg" alt=""></a>
@@ -80,17 +77,166 @@
 
           </div>
           <div class="maintext">
-            <p>We help customers quickly identify available mode opportunities to convert Less-Than-Truckload (
-              LTL) freight to truckload or intermodal instead, which can be cost beneficial. This means less handling
-              of shipments, which causes faster transit times and mitigates the risk for freight claims. Streamlining
-              your transportation also means less fuel consumption, which is better for the environment.</p>
+            <p>From a single truckload shipment to a multi-faceted logistics project, our dedicated logistics
+               professional coordinate every load, every step of the way providing you with the service every
+               company deserves. With a network of over 35,000 carriers, we help leverage our carrier partnerships
+               to handle your shipments from beginning to the end. Our carriers are an extension of us, and held to
+                the highest standard. As capacity tightens, the relationships become ever so important. Truckload
+                cargo gets real-time GPS tracking, so you have complete visibility into your shipment whenever
+                you need an update. Truckload services include:</p>
           </div>
         </div>
         <div class="mainimg">
-          <img src="https://app.salesdrip.com/users/myteam45785/Media15.png" alt="">
+          <a href=""><img src="https://app.salesdrip.com/users/myteam45785/Media11.png" alt=""></a>
         </div>
       </div>
-
+      <div class="servlists">
+        <!--------------------------------List------------------------------>
+        <div class="typelist">
+          <div class="listicon">
+            <img src="https://app.salesdrip.com/users/myteam45785/Media42.png" alt="">
+          </div>
+          <div class="listcontent">
+          <div class="titlelist">Service Type</div>
+          <div class="typeitem">
+            Standard
+          </div>
+          <div class="typeitem">
+            Expedited
+          </div>
+          <div class="typeitem">
+            Partial Truckload
+          </div>
+          <div class="typeitem">
+            Economy/Volume
+          </div>
+          <div class="typeitem">
+            Multi-Stop
+          </div>
+          <div class="typeitem">
+            Drop Trailer
+          </div>
+          </div>
+        </div>
+        <!--------------------------------List------------------------------>
+        <div class="typelist">
+          <div class="listicon">
+            <img src="https://app.salesdrip.com/users/myteam45785/Media42.png" alt="">
+          </div>
+          <div class="listcontent">
+          <div class="titlelist">Equipment Type</div>
+          <div class="typeitem">
+            Dry Van
+          </div>
+          <div class="typeitem">
+            Flatbed
+          </div>
+          <div class="typeitem">
+            Refrigerated
+          </div>
+          <div class="typeitem">
+            Step Deck
+          </div>
+          <div class="typeitem">
+            Heavy Haul
+          </div>
+          <div class="typeitem">
+            RGN
+          </div>
+          <div class="typeitem">
+            Over-Dimensional
+          </div>
+          </div>
+        </div>
+        <!--------------------------------List------------------------------>
+        <div class="typelist">
+          <div class="listicon">
+            <img src="https://app.salesdrip.com/users/myteam45785/Media42.png" alt="">
+          </div>
+          <div class="listcontent">
+          <div class="titlelist">Service Area</div>
+          <div class="typeitem">
+            Cross-Border
+          </div>
+          <div class="typeitem">
+            National Coverage
+          </div>
+          <div class="typeitem">
+            Regional Coverage
+          </div>
+          <div class="typeitem">
+            Local Coverage
+          </div>
+          </div>
+        </div>
+        <!--------------------------------List------------------------------>
+        <div class="typelist">
+          <div class="listicon">
+            <img src="https://app.salesdrip.com/users/myteam45785/Media42.png" alt="">
+          </div>
+          <div class="listcontent">
+          <div class="titlelist">Expedited</div>
+          <div class="typeitem">
+            Dedicated Team Drivers
+          </div>
+          <div class="typeitem">
+            Real-Time GPS Tracking
+          </div>
+          <div class="typeitem">
+            Proactive Updates
+          </div>
+          <div class="typeitem">
+            24/7 Support
+          </div>
+          </div>
+        </div>
+        <!--------------------------------List------------------------------>
+        <div class="typelist">
+          <div class="listicon">
+            <img src="https://app.salesdrip.com/users/myteam45785/Media42.png" alt="">
+          </div>
+          <div class="listcontent">
+          <div class="titlelist">Project Freight</div>
+          <div class="typeitem">
+            Retail Rollout
+          </div>
+          <div class="typeitem">
+            Holiday Volume Surge
+          </div>
+          <div class="typeitem">
+            Disaster Relief
+          </div>
+          <div class="typeitem">
+            Government
+          </div>
+          <div class="typeitem">
+            Military
+          </div>
+          </div>
+        </div>
+        <!--------------------------------List------------------------------>
+        <div class="typelist">
+          <div class="listicon">
+            <img src="https://app.salesdrip.com/users/myteam45785/Media42.png" alt="">
+          </div>
+          <div class="listcontent">
+          <div class="titlelist">High Value Freight</div>
+          <div class="typeitem">
+            Alcoholic Beverages
+          </div>
+          <div class="typeitem">
+            Pharmaceuticals
+          </div>
+          <div class="typeitem">
+            Electronics
+          </div>
+          <div class="typeitem">
+            Hazmat
+          </div>
+          </div>
+        </div>
+        <!--------------------------------List------------------------------>
+      </div>
       </div>
     </div>
     <!-- Footer Section ------------------------------------------------------>
@@ -220,7 +366,7 @@
        </div>
        <div class="contactbar">
          <p> Sims Global Solutions. 6101 Long Prairie Rd., Ste. 744-252, Flower Mound, TX 75028
-     <span class="doublepad">Email: <span class="blue"><a class="blue" href="<a href="mailto:customerservice@simsglobalsolutions.com">customerservice@simsglobalsolutions.com</a></span></span>
+          <span class="doublepad">Email: <span class="blue"><a class="blue" href="<a href="mailto:customerservice@simsglobalsolutions.com">customerservice@simsglobalsolutions.com</a></span></span>
 <span class="pad">Phone: <a class="blue" href="tel:+1855-326-8671">855-326-8671</a></span> <span class="pad">Fax: <span>214-594-9164</span></span></p>
        </div>
       </div>
