--- a/documents.html
+++ b/documents.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="shortcut icon" href="https://app.salesdrip.com/users/myteam45785/Media180.ico"/>
-    <title>Sims Global Solutions</title>
+    <title>Documents</title>
     <link rel="stylesheet" type="text/css" href="resources/css/reset.css">
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Oswald:700,400,300|Rubik:300,400,500" rel="stylesheet">
@@ -53,22 +53,19 @@
     <div class="main">
       <div class="mainbanner">
         <div class="bannertitle">
-          Customized Shipping solutions
+          Start Shipping Today
         </div>
       </div>
       <div class="stripyellow">
         <div class="yellowtitle">
-          Services
+          Documents
         </div>
       </div>
       <div class="section1">
       <div class="mainbody">
-
-
-
         <div class="maincontent">
           <div class="maintitle">
-            SERVICES AND TECHNOLOGY
+            Online applications
           </div>
           <div class="mainmedia">
             <a href="https://www.facebook.com/dialog/share?app_id=5303202981&display=popup&href=https%3A%2F%2Fshipsims.com%2Fservices%2F&redirect_uri=https%3A%2F%2Fstatic.addtoany.com%2Fmenu%2Fthanks.html%23url%3Dhttps%3A%2F%2Fshipsims.com%2Fservices%2F&quote=" target="_blank"><img src="https://app.salesdrip.com/users/myteam45785/Media184.jpg" alt=""></a>
@@ -76,21 +73,40 @@
             <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fshipsims.com%2Fservices%2F" target="_blank"><img src="https://app.salesdrip.com/users/myteam45785/Media183.jpg" alt=""></a>
             <a href="https://plus.google.com/up/?continue=https://plus.google.com/share?url%3Dhttps://shipsims.com/services/" target="_blank"><img src="https://app.salesdrip.com/users/myteam45785/Media185.jpg" alt=""></a>
             <a href="https://www.pinterest.com/simsglobalsolut/" target="_blank"><img src="https://app.salesdrip.com/users/myteam45785/Media186.jpg" alt=""></a>
-            <a href="mailto:customerservice@simsglobalsolutions.com" target="_blank"><img src="https://app.salesdrip.com/users/myteam45785/Media182.jpg" alt=""></a>
+            <a href="mailto:customerservice@simsglobalsolutions.com"><img src="https://app.salesdrip.com/users/myteam45785/Media182.jpg" alt=""></a>
 
           </div>
           <div class="maintext">
-            <p>We help customers quickly identify available mode opportunities to convert Less-Than-Truckload (
-              LTL) freight to truckload or intermodal instead, which can be cost beneficial. This means less handling
-              of shipments, which causes faster transit times and mitigates the risk for freight claims. Streamlining
-              your transportation also means less fuel consumption, which is better for the environment.</p>
+            <p>Sims Global Solutions offers lines of credit to help you get your shipment on its way.
+              Contact a sales representative to submit the necessary forms to get approved and start shipping
+              today! Our most popular forms are available to download below. Email completed
+               forms to <a href="mailto:customerservice@simsglobalsolutions.com" class="blue">customerservice@simsglobalsolutions.com</a></p>
           </div>
         </div>
         <div class="mainimg">
-          <img src="https://app.salesdrip.com/users/myteam45785/Media15.png" alt="">
+          <a href="mailto:customerservice@simsglobalsolutions.com"><img src="https://app.salesdrip.com/users/myteam45785/Media15.png" alt=""></a>
         </div>
       </div>
-
+      <div class="pdflist">
+        <div class="servicon">
+          <a href="#"><img src="https://app.salesdrip.com/users/myteam45785/Media42.png" alt=""><p>Truckload</p></a>
+        </div>
+        <div class="servicon">
+          <a href="#"><img src="https://app.salesdrip.com/users/myteam45785/Media45.png" alt=""><p>LTL</p></a>
+        </div>
+        <div class="servicon">
+          <a href="#"><img src="https://app.salesdrip.com/users/myteam45785/Media44.png" alt=""><p>Expedited</p></a>
+        </div>
+        <div class="servicon">
+          <a href="#"><img src="https://app.salesdrip.com/users/myteam45785/Media41.png" alt=""><p>Intermodal</p></a>
+        </div>
+        <div class="servicon">
+          <a href="#"><img src="https://app.salesdrip.com/users/myteam45785/Media46.png" alt=""><p>Specialized</p></a>
+        </div>
+        <div class="servicon">
+          <a href="#"><img src="https://app.salesdrip.com/users/myteam45785/Media43.png" alt=""><p>International</p></a>
+        </div>
+      </div>
       </div>
     </div>
     <!-- Footer Section ------------------------------------------------------>
@@ -220,7 +236,7 @@
        </div>
        <div class="contactbar">
          <p> Sims Global Solutions. 6101 Long Prairie Rd., Ste. 744-252, Flower Mound, TX 75028
-     <span class="doublepad">Email: <span class="blue"><a class="blue" href="<a href="mailto:customerservice@simsglobalsolutions.com">customerservice@simsglobalsolutions.com</a></span></span>
+          <span class="doublepad">Email: <span class="blue"><a class="blue" href="<a href="mailto:customerservice@simsglobalsolutions.com">customerservice@simsglobalsolutions.com</a></span></span>
 <span class="pad">Phone: <a class="blue" href="tel:+1855-326-8671">855-326-8671</a></span> <span class="pad">Fax: <span>214-594-9164</span></span></p>
        </div>
       </div>
